lecture-8-docker/k8s/application/spring-app/spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: app
          image: spring-app
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
