lecture-8-docker/k8s/application/spring-app/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: payment
  name: payment
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: payment
  type: ClusterIP
status:
  loadBalancer: {}
