lecture-8-docker/k8s/application/spring-app/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /actuator/health
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment
            port:
              number: 8080
      - path: /users/.*
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 8080
